# r-type

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  config.json  main.cpp  test_server.cpp  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_fix.md  issue_template.md
.github/workflows/: build-test.yml  ci.yml  clang-format-check.yml  documentation.yml  lint.yml  sync-epitech.yml
assets/shaders/: colorblind.frag
client/: Button.cpp  Button.hpp  CMakeLists.txt  ColorBlindFilter.cpp  ColorBlindFilter.hpp  Config.cpp  Config.hpp  ConnectionDialog.cpp  ConnectionDialog.hpp  GameOverScreen.cpp  GameOverScreen.hpp  InputField.cpp  InputField.hpp  JoinLobbyDialog.cpp  JoinLobbyDialog.hpp  KeyBinding.cpp  KeyBinding.hpp  KeyBindingButton.cpp  KeyBindingButton.hpp  LobbyConfigMenu.cpp  LobbyConfigMenu.hpp  LobbyMenu.cpp  LobbyMenu.hpp  LobbyWaitingRoom.cpp  LobbyWaitingRoom.hpp  Menu.cpp  Menu.hpp  ReplayBrowser.cpp  ReplayBrowser.hpp  ReplayControls.cpp  ReplayControls.hpp  Resolution.hpp  ResolutionButton.cpp  ResolutionButton.hpp  SelectionButton.cpp  SelectionButton.hpp  SettingsMenu.cpp  SettingsMenu.hpp  Slider.cpp  Slider.hpp  (+4 more)
client/network/: CMakeLists.txt  ClientGameState.cpp  ClientGameState.hpp  NetworkClientAsio.cpp  NetworkClientAsio.hpp
client/src/: Background.cpp  Background.hpp  Boss.cpp  Boss.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Explosion.cpp  Explosion.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  ReplayViewer.cpp  ReplayViewer.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
client/wrapper/: CMakeLists.txt  IMusic.hpp  ISound.hpp  MusicSFML.cpp  MusicSFML.hpp  SoundSFML.cpp  SoundSFML.hpp
client/wrapper/audio/: Audio.hpp  AudioSFML.cpp  AudioSFML.hpp  CMakeLists.txt
client/wrapper/graphics/: CMakeLists.txt  Graphics.hpp  GraphicsSFML.cpp  GraphicsSFML.hpp  IShader.hpp  RenderStates.hpp  RenderStatesSFML.cpp  RenderStatesSFML.hpp  RenderTarget.hpp  RenderTargetSFML.cpp  RenderTargetSFML.hpp  Shader.hpp  ShaderSFML.cpp  ShaderSFML.hpp  Sprite.hpp  SpriteSFML.cpp  SpriteSFML.hpp
client/wrapper/input/: CMakeLists.txt  Input.hpp  InputSFML.cpp  InputSFML.hpp
client/wrapper/network/: ClientGameState.cpp  ClientGameState.hpp  INetworkClient.hpp  NetworkClientAsio.cpp  NetworkClientAsio.hpp  NetworkMessage.cpp  NetworkMessage.hpp
client/wrapper/resources/: EmbeddedResources.hpp
client/wrapper/utils/: CMakeLists.txt  Clock.hpp  ClockSFML.cpp  ClockSFML.hpp
client/wrapper/window/: CMakeLists.txt  Window.hpp  WindowSFML.cpp  WindowSFML.hpp
common/: CMakeLists.txt
common/network/: CMakeLists.txt  EntityType.hpp  GameRules.hpp  INetworkBase.hpp  INetworkClient.hpp  INetworkServer.hpp  InputMask.hpp  NetworkMessage.cpp  NetworkMessage.hpp  Protocol.hpp
common/replay/: CMakeLists.txt  ReplayPlayer.cpp  ReplayPlayer.hpp  ReplayRecorder.cpp  ReplayRecorder.hpp
common/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp  PathHelper.cpp  PathHelper.hpp
doc/: ARCHITECTURE.md  GAME_OVERVIEW.md  LINTER_GUIDE.md  NETWORK_ARCHITECTURE_VISUAL.md  NETWORK_CLIENT_ARCHITECTURE.md  NETWORK_CLIENT_USAGE.md  SFML_WRAPPER.md  SFML_WRAPPER_README.md  TECHNICAL_CHOICES.md
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/diagrams/: 01-ecs-architecture.puml  02-network-protocol.puml  03-game-loop-sequence.puml  04-client-architecture.puml  05-network-flow.puml  06-component-system-interaction.puml  07-threading-architecture.puml  08b-wave-system-sequence.puml  README.md
engine/: CMakeLists.txt
levels/: level_01.json  level_02.json  level_03.json  level_03_backup.json
network/: INetworkBase.hpp  INetworkClient.hpp  INetworkServer.hpp  NetworkMessage.cpp  NetworkMessage.hpp
poc/: README.md  apt_install.sh  conanfile.txt  network_boost.cpp  network_unix.cpp  raylib_window.cpp  sdl2_window.cpp  threads_boost.cpp  threads_std.cpp  vcpkg_example.json
server/: CMakeLists.txt  GameEvents.hpp  GameServer.cpp  GameServer.hpp  ServerConfig.cpp  ServerConfig.hpp  main.cpp
server/engine/: CMakeLists.txt
server/engine/Component/: CMakeLists.txt  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentManager.tpp  GameComponents.hpp
server/engine/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityFactory.tpp  EntityManager.cpp  EntityManager.hpp  EntityManager.tpp
server/engine/System/: CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  GameSystems.cpp  GameSystems.hpp  System.cpp  System.hpp  System.tpp
server/engine/Threading/: CMakeLists.txt  ThreadSafeEntityManager.hpp  ThreadSafeEntityManager.tpp  ThreadSafeQueue.hpp  ThreadSafeQueue.tpp
server/engine/component/: CMakeLists.txt  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentManager.tpp  GameComponents.cpp  GameComponents.hpp
server/engine/entity/: CMakeLists.txt  Entity.hpp  EntityManager.cpp  EntityManager.tpp  GameEntityFactory.cpp  GameEntityFactory.hpp
server/engine/events/: CMakeLists.txt  SpawnEvents.hpp
server/engine/system/: BossSystem.cpp  BossSystem.hpp  CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  GameSystems.cpp  GameSystems.hpp  System.hpp  System.tpp
server/engine/tests/: ArchetypeSignatureTests.cpp  CMakeLists.txt  ComponentManagerTests.cpp  ComponentTests.cpp  EntityManagerTests.cpp  EntityTests.cpp  SystemTests.cpp  ThreadSafeEntityManagerTests.cpp  ThreadSafeQueueTests.cpp
server/engine/threading/: CMakeLists.txt  ThreadSafeEntityManager.hpp  ThreadSafeEntityManager.tpp  ThreadSafeQueue.hpp  ThreadSafeQueue.tpp
server/engine/wave/: CMakeLists.txt  WaveDefinition.hpp  WaveLoader.cpp  WaveLoader.hpp  WaveManager.cpp  WaveManager.hpp
server/network/: CMakeLists.txt  NetworkServer.cpp  NetworkServer.hpp  NetworkServerAsio.hpp  Protocol.hpp
server/network/tests/: CMakeLists.txt  NetworkServerTests.cpp  ProtocolTests.cpp
server/tests/: CMakeLists.txt  GameEventsTests.cpp  GameServerTests.cpp
server/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp
(+58 files in other folders)
